<resources>
    <string name="app_name">Dialer</string>
    <string name="input">Enter Phone Number</string>
    <string name="del_caps">DEL</string>
    <string name="first_contact">Contact 1</string>
    <string name="second_contact">Contact 2</string>
    <string name="third_contact">Contact 3</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="hashtag">#</string>
    <string name="contact">Contact</string>
    <string name="input_contact_name">Enter Contact Name</string>
    <string name="input_contact_number">Enter Phone Number</string>
    <string name="update">Update</string>
</resources>