<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        >
        <!--input of phone number-->
        <EditText
            android:id="@+id/phoneNumber"
            android:hint="@string/input"
            android:inputType="phone"
            android:layout_marginHorizontal="10dp"
            />

        <Button
            android:id="@+id/delete"
            android:background="@color/pearlBush"
            android:text="@string/del_caps"
            android:textColor="@color/white"
            android:layout_marginHorizontal="25dp"
            />
    </TableRow>

    <!--speed dial contacts-->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="25dp"
        >
        <Button
            android:hint="@string/first_contact"
            android:id="@+id/speedDialBtn1"
            android:textColorHint="@color/pearlBush"
            android:textColor="@color/white"
            android:background="@color/clayShell"
            android:layout_marginHorizontal="10dp"
            />
        <Button
            android:hint="@string/second_contact"
            android:id="@+id/speedDialBtn2"
            android:textColorHint="@color/pearlBush"
            android:textColor="@color/white"
            android:background="@color/clayShell"
            android:layout_marginHorizontal="10dp"
            />
        <Button
            android:hint="@string/third_contact"
            android:textColorHint="@color/pearlBush"
            android:textColor="@color/white"
            android:id="@+id/speedDialBtn3"
            android:background="@color/clayShell"
            android:layout_marginHorizontal="10dp"
            />
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="25dp"
        >
        <Button
            android:text="@string/one"
            android:id="@+id/btn1"
            android:textColorHint="@color/pearlBush"
            android:textColor="@color/white"
            android:background="@color/edgeWater"
            android:layout_marginHorizontal="10dp"
            />
        <Button
            android:text="@string/two"
            android:id="@+id/btn2"
            android:textColorHint="@color/pearlBush"
            android:textColor="@color/white"
            android:background="@color/edgeWater"
            android:layout_marginHorizontal="10dp"
            />
        <Button
            android:text="@string/three"
            android:textColorHint="@color/pearlBush"
            android:textColor="@color/white"
            android:id="@+id/btn3"
            android:background="@color/edgeWater"
            android:layout_marginHorizontal="10dp"
            />
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="25dp"
        >
        <Button
            android:text="@string/four"
            android:id="@+id/btn4"
            android:textColorHint="@color/pearlBush"
            android:textColor="@color/white"
            android:background="@color/edgeWater"
            android:layout_marginHorizontal="10dp"
            />
        <Button
            android:text="@string/five"
            android:id="@+id/btn5"
            android:textColorHint="@color/pearlBush"
            android:textColor="@color/white"
            android:background="@color/edgeWater"
            android:layout_marginHorizontal="10dp"
            />
        <Button
            android:text="@string/six"
            android:textColorHint="@color/pearlBush"
            android:textColor="@color/white"
            android:id="@+id/btn6"
            android:background="@color/edgeWater"
            android:layout_marginHorizontal="10dp"
            />
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="25dp"
        >
        <Button
            android:text="@string/seven"
            android:id="@+id/btn7"
            android:textColorHint="@color/pearlBush"
            android:textColor="@color/white"
            android:background="@color/edgeWater"
            android:layout_marginHorizontal="10dp"
            />
        <Button
            android:text="@string/eight"
            android:id="@+id/btn8"
            android:textColorHint="@color/pearlBush"
            android:textColor="@color/white"
            android:background="@color/edgeWater"
            android:layout_marginHorizontal="10dp"
            />
        <Button
            android:text="@string/nine"
            android:textColorHint="@color/pearlBush"
            android:textColor="@color/white"
            android:id="@+id/btn9"
            android:background="@color/edgeWater"
            android:layout_marginHorizontal="10dp"
            />
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="25dp"
        >
        <Button
            android:text="@string/plus"
            android:id="@+id/btnPlus"
            android:textColorHint="@color/pearlBush"
            android:textColor="@color/white"
            android:background="@color/edgeWater"
            android:layout_marginHorizontal="10dp"
            />
        <Button
            android:text="@string/zero"
            android:id="@+id/btn0"
            android:textColorHint="@color/pearlBush"
            android:textColor="@color/white"
            android:background="@color/edgeWater"
            android:layout_marginHorizontal="10dp"
            />
        <Button
            android:text="@string/hashtag"
            android:textColorHint="@color/pearlBush"
            android:textColor="@color/white"
            android:id="@+id/btnHashtag"
            android:background="@color/edgeWater"
            android:layout_marginHorizontal="10dp"
            />
    </TableRow>



    <!--button to dial phone number-->
    <ImageButton
        android:id="@+id/dialButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/bayLeaf"
        android:src="@android:drawable/stat_sys_phone_call"
        android:layout_marginHorizontal="100dp"
    />


</LinearLayout>